--- a/_includes/svg-icons.html
+++ b/_includes/svg-icons.html
@@ -11,3 +11,4 @@
 {% if site.footer-links.stackoverflow %}<a href="http://stackoverflow.com/{{ site.footer-links.stackoverflow }}"><i class="svg-icon stackoverflow"></i></a>{% endif %}
 {% if site.footer-links.youtube %}<a href="https://youtube.com/{{ site.footer-links.youtube }}"><i class="svg-icon youtube"></i></a>{% endif %}
 {% if site.footer-links.googleplus %}<a href="https://plus.google.com/{{ site.footer-links.googleplus }}"><i class="svg-icon googleplus"></i></a>{% endif %}
+{% if site.footer-links.zhihu %}<a href="https://www.zhihu.com/people/{{ site.footer-links.zhihu }}"><i class="svg-icon zhihu"></i></a>{% endif %}
