--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -3,6 +3,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'>
     <meta name="baidu-site-verification" content="QTjrQ4v5mg" />
+    <meta baidu-gxt-verify-token="e4e5ebc2f56aed6f16f880f2a01bdd74">
 
     {% if page.excerpt %}
     <meta name="description" content="{{ page.excerpt| strip_html }}" />
